random_new_architecture/mnist/err_40805847.txt
Traceback (most recent call last):
  File "/n/home12/thb489/new_continual_learning/continual-learning/run.py", line 16, in <module>
    from mnist import run_mnist
  File "/n/home12/thb489/new_continual_learning/continual-learning/mnist.py", line 182
    managers = [
                ^
IndentationError: unindent does not match any outer indentation level
